Revert "fix(tag): replacing gux-tooltip-title with gux-truncate"
This reverts commit e81b4ba9c87909dd31b033cc000d0ffb0e867a4f.

--- a/packages/genesys-spark-components/src/components/stable/gux-tag/gux-tag.scss
+++ b/packages/genesys-spark-components/src/components/stable/gux-tag/gux-tag.scss
@@ -35,7 +35,7 @@
     }
   }
 
-  gux-truncate {
+  gux-tooltip-title {
     white-space: nowrap;
     cursor: default;
 
